[package]
name = "mangocode-tui"
version.workspace = true
edition.workspace = true

[features]
default = ["proactive", "default-tools"]
default-tools = ["mangocode-query/default-tools", "mangocode-tools/default-tools"]
default-tools-no-web-research = [
    "mangocode-query/default-tools-no-web-research",
    "mangocode-tools/default-tools-no-web-research",
]
full-tools = ["mangocode-query/full-tools", "mangocode-tools/full-tools"]

tool-agent = ["mangocode-query/tool-agent", "mangocode-tools/tool-agent"]
tool-apply-patch = ["mangocode-query/tool-apply-patch", "mangocode-tools/tool-apply-patch"]
tool-ask-user = ["mangocode-query/tool-ask-user", "mangocode-tools/tool-ask-user"]
tool-bash = ["mangocode-query/tool-bash", "mangocode-tools/tool-bash"]
tool-batch-edit = ["mangocode-query/tool-batch-edit", "mangocode-tools/tool-batch-edit"]
tool-brief = ["mangocode-query/tool-brief", "mangocode-tools/tool-brief"]
tool-browser = ["mangocode-query/tool-browser", "mangocode-tools/tool-browser"]
tool-computer-use = ["mangocode-query/tool-computer-use", "mangocode-tools/tool-computer-use"]
tool-config = ["mangocode-query/tool-config", "mangocode-tools/tool-config"]
tool-cron-create = ["mangocode-query/tool-cron-create", "mangocode-tools/tool-cron-create"]
tool-cron-delete = ["mangocode-query/tool-cron-delete", "mangocode-tools/tool-cron-delete"]
tool-cron-list = ["mangocode-query/tool-cron-list", "mangocode-tools/tool-cron-list"]
tool-create-goal = ["mangocode-query/tool-create-goal", "mangocode-tools/tool-create-goal"]
tool-deep-read = ["mangocode-query/tool-deep-read", "mangocode-tools/tool-deep-read"]
tool-doc-read = ["mangocode-query/tool-doc-read", "mangocode-tools/tool-doc-read"]
tool-doc-search = ["mangocode-query/tool-doc-search", "mangocode-tools/tool-doc-search"]
tool-edit = ["mangocode-query/tool-edit", "mangocode-tools/tool-edit"]
tool-enter-plan-mode = ["mangocode-query/tool-enter-plan-mode", "mangocode-tools/tool-enter-plan-mode"]
tool-enter-worktree = ["mangocode-query/tool-enter-worktree", "mangocode-tools/tool-enter-worktree"]
tool-exit-plan-mode = ["mangocode-query/tool-exit-plan-mode", "mangocode-tools/tool-exit-plan-mode"]
tool-exit-worktree = ["mangocode-query/tool-exit-worktree", "mangocode-tools/tool-exit-worktree"]
tool-get-goal = ["mangocode-query/tool-get-goal", "mangocode-tools/tool-get-goal"]
tool-glob = ["mangocode-query/tool-glob", "mangocode-tools/tool-glob"]
tool-grep = ["mangocode-query/tool-grep", "mangocode-tools/tool-grep"]
tool-list-mcp-resources = ["mangocode-query/tool-list-mcp-resources", "mangocode-tools/tool-list-mcp-resources"]
tool-lsp = ["mangocode-query/tool-lsp", "mangocode-tools/tool-lsp"]
tool-mcp-auth = ["mangocode-query/tool-mcp-auth", "mangocode-tools/tool-mcp-auth"]
tool-notebook-edit = ["mangocode-query/tool-notebook-edit", "mangocode-tools/tool-notebook-edit"]
tool-powershell = ["mangocode-query/tool-powershell", "mangocode-tools/tool-powershell"]
tool-pr-watch = ["mangocode-query/tool-pr-watch", "mangocode-tools/tool-pr-watch"]
tool-read = ["mangocode-query/tool-read", "mangocode-tools/tool-read"]
tool-read-mcp-resource = ["mangocode-query/tool-read-mcp-resource", "mangocode-tools/tool-read-mcp-resource"]
tool-remote-trigger = ["mangocode-query/tool-remote-trigger", "mangocode-tools/tool-remote-trigger"]
tool-rendered-fetch = ["mangocode-query/tool-rendered-fetch", "mangocode-tools/tool-rendered-fetch"]
tool-repl = ["mangocode-query/tool-repl", "mangocode-tools/tool-repl"]
tool-send-message = ["mangocode-query/tool-send-message", "mangocode-tools/tool-send-message"]
tool-skill = ["mangocode-query/tool-skill", "mangocode-tools/tool-skill"]
tool-sleep = ["mangocode-query/tool-sleep", "mangocode-tools/tool-sleep"]
tool-structured-output = ["mangocode-query/tool-structured-output", "mangocode-tools/tool-structured-output"]
tool-task-create = ["mangocode-query/tool-task-create", "mangocode-tools/tool-task-create"]
tool-task-get = ["mangocode-query/tool-task-get", "mangocode-tools/tool-task-get"]
tool-task-list = ["mangocode-query/tool-task-list", "mangocode-tools/tool-task-list"]
tool-task-output = ["mangocode-query/tool-task-output", "mangocode-tools/tool-task-output"]
tool-task-stop = ["mangocode-query/tool-task-stop", "mangocode-tools/tool-task-stop"]
tool-task-update = ["mangocode-query/tool-task-update", "mangocode-tools/tool-task-update"]
tool-team-create = ["mangocode-query/tool-team-create", "mangocode-tools/tool-team-create"]
tool-team-delete = ["mangocode-query/tool-team-delete", "mangocode-tools/tool-team-delete"]
tool-todo-write = ["mangocode-query/tool-todo-write", "mangocode-tools/tool-todo-write"]
tool-tool-log-read = ["mangocode-query/tool-tool-log-read", "mangocode-tools/tool-tool-log-read"]
tool-tool-search = ["mangocode-query/tool-tool-search", "mangocode-tools/tool-tool-search"]
tool-update-goal = ["mangocode-query/tool-update-goal", "mangocode-tools/tool-update-goal"]
tool-view-image = ["mangocode-query/tool-view-image", "mangocode-tools/tool-view-image"]
tool-web-fetch = ["mangocode-query/tool-web-fetch", "mangocode-tools/tool-web-fetch"]
tool-web-search = ["mangocode-query/tool-web-search", "mangocode-tools/tool-web-search"]
tool-write = ["mangocode-query/tool-write", "mangocode-tools/tool-write"]

# Enable real microphone capture for voice PTT mode.
voice = ["mangocode-core/voice", "dep:cpal", "dep:hound"]

# UI & Interaction features (pass-through from cc-core)
token_budget = ["mangocode-core/token_budget"]
ultraplan = ["mangocode-core/ultraplan"]
ultrathink = ["mangocode-core/ultrathink"]
history_picker = ["mangocode-core/history_picker"]
message_actions = ["mangocode-core/message_actions"]
quick_search = ["mangocode-core/quick_search"]
away_summary = ["mangocode-core/away_summary"]
hook_prompts = ["mangocode-core/hook_prompts"]
kairos_brief = ["mangocode-core/kairos_brief"]
kairos_channels = ["mangocode-core/kairos_channels"]
lodestone = ["mangocode-core/lodestone"]

# Agents & Memory features (pass-through from cc-core)
agent_triggers = ["mangocode-core/agent_triggers"]
agent_triggers_remote = ["mangocode-core/agent_triggers_remote"]
proactive = ["mangocode-core/proactive", "mangocode-query/proactive"]
extract_memories = ["mangocode-core/extract_memories"]
verification_agent = ["mangocode-core/verification_agent"]
builtin_explore_plan_agents = ["mangocode-core/builtin_explore_plan_agents"]
cached_microcompact = ["mangocode-core/cached_microcompact"]
compaction_reminders = ["mangocode-core/compaction_reminders"]
agent_memory_snapshot = ["mangocode-core/agent_memory_snapshot"]
teammem = ["mangocode-core/teammem"]

# Tools & Infrastructure features (pass-through from cc-core)
bash_classifier = ["mangocode-core/bash_classifier"]
bridge_mode = ["mangocode-core/bridge_mode"]
mcp_rich_output = ["mangocode-core/mcp_rich_output"]
connector_text = ["mangocode-core/connector_text"]
unattended_retry = ["mangocode-core/unattended_retry"]
new_init = ["mangocode-core/new_init"]
powershell_auto_mode = ["mangocode-core/powershell_auto_mode"]
shot_stats = ["mangocode-core/shot_stats"]
tree_sitter_bash = ["mangocode-core/tree_sitter_bash"]
tree_sitter_bash_shadow = ["mangocode-core/tree_sitter_bash_shadow"]
native_clipboard_image = ["mangocode-core/native_clipboard_image"]
prompt_cache_break_detection = ["mangocode-core/prompt_cache_break_detection"]
ccr_auto_connect = ["mangocode-core/ccr_auto_connect"]
ccr_mirror = ["mangocode-core/ccr_mirror"]
ccr_remote_setup = ["mangocode-core/ccr_remote_setup"]

[dependencies]
mangocode-core = { workspace = true }
mangocode-api = { workspace = true }
mangocode-tools = { workspace = true, default-features = false }
mangocode-query = { workspace = true, default-features = false }
mangocode-mcp = { workspace = true }
mangocode-plugins = { workspace = true }
mangocode-file-search = { workspace = true }
mangocode-turn-diff = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
similar = { workspace = true }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
once_cell = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
icy_sixel = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
resvg = { workspace = true }
notify-rust = "4"
# Optional audio capture for voice PTT (gated behind the `voice` feature)
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
