[package]
name = "mangocode-turn-diff"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
mangocode-core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
similar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
